--- a/intro/Index.html
+++ b/intro/Index.html
@@ -13,11 +13,20 @@
             <a href="Index.html">
                 <img src="images/LD_logo.svg" alt="LEGO-DUDES">
             </a>
-            <figure id="cart">
-                <span class="label">2</span>
+            <figure id="cart" onclick="toggleCart()">
+                <span class="label">0</span>
                 <img src="images/legocart.svg" alt="Handlekurv">
             </figure>
         </header>
+        <section id="cartview" class="hidden">
+            <h3>Din handlevogn</h3>
+            <ul>
+                <li>
+                    <p>du har ingen varer i handlevognen</p>
+                </li>
+            </ul>
+            <p>Total kr. <span id="total">0</span>,-</p>
+        </section>
         <nav>
             <a href="city.html">City</a>
             <a class="active" href="ninjago.html">NinjaGo</a>
@@ -32,35 +41,35 @@
                 <a href="ninjago.hmtl">NinjaGo</a>
                 <h3>Dragon Zane</h3>
                 <span class="price">Kr.89,-</span>
-                <button>Legg i Handlekurv</button>
+                <button onclick="addToCart('Dragon Zane', 89)">Legg i Handlekurv</button>
             </article>
             <article class="product-card">
                 <img src="images/PROD_lil_ninja.webp" alt="Produktbilde av Zane">
                 <a href="ninjago.hmtl">NinjaGo</a>
                 <h3>Lil Ninja</h3>
                 <span class="price">Kr.89,-</span>
-                <button>Legg i Handlekurv</button>
+                <button onclick="addToCart('Lil Ninja', 89)">Legg i Handlekurv</button>
             </article>
             <article class="product-card">
                 <img src="images/PROD_master_wu.webp" alt="Produktbilde av Zane">
                 <a href="ninjago.hmtl">NinjaGo</a>
                 <h3>Master wu</h3>
                 <span class="price">Kr.89,-</span>
-                <button>Legg i Handlekurv</button>
+                <button onclick="addToCart('Master Wu', 89)">Legg i Handlekurv</button>
             </article>
             <article class="product-card">
                 <img src="images/PROD_scuba_kai.webp" alt="Produktbilde av Zane">
                 <a href="ninjago.hmtl">NinjaGo</a>
                 <h3>Scuba Dive</h3>
                 <span class="price">Kr.89,-</span>
-                <button>Legg i Handlekurv</button>
+                <button onclick="addToCart('Scuba Dive', 89)">Legg i Handlekurv</button>
             </article>
             <article class="product-card">
                 <img src="images/PROD_the_mechanic.webp" alt="Produktbilde av Zane">
                 <a href="ninjago.hmtl">NinjaGo</a>
                 <h3>The Mechanic</h3>
                 <span class="price">Kr.89,-</span>
-                <button>Legg i Handlekurv</button>
+                <button onclick="addToCart('The Mechanic', 89)">Legg i Handlekurv</button>
             </article>
             
         </main>
