--- a/UIN_coursefiles_2023/arbeidskrav_2/index.html
+++ b/UIN_coursefiles_2023/arbeidskrav_2/index.html
@@ -8,6 +8,23 @@
     <title>Arbeidskrav 2</title>
 </head>
 <body>
+    <div class="container">
+        <header>
+            <h1>ressursarkiv</h1>
+        </header>
+        <nav>
+            <ul>
+                <li>html</li>
+                <li>css</li>
+                <li>javascript</li>
+                <li>react</li>
+                <li>sanity & headless cms</li>
+            </ul>
+        </nav>
+        <main>
+            <h3>kategori</h3>
+        </main>
+    </div>
     
     <script src="ressurser.js"></script>
 </body>
