--- a/UIN_coursefiles_2023/arbeidskrav_2/index.html
+++ b/UIN_coursefiles_2023/arbeidskrav_2/index.html
@@ -13,17 +13,20 @@
             <h1>ressursarkiv</h1>
         </header>
         <nav>
-            <ul>
-                <li>html</li>
-                <li>css</li>
-                <li>javascript</li>
-                <li>react</li>
-                <li>sanity & headless cms</li>
-            </ul>
+                <button onclick="addHTML()">html</button>
+                <button onclick="addToBody()">css</button>
+                <button onclick="addToBody()">javascript</button>
+                <button onclick="addToBody()">react</button>
+                <button onclick="addToBody()">sanity & headless cms</button>
         </nav>
-        <main>
-            <h3>kategori</h3>
-        </main>
+        <section id="bodyview">
+            <h3>Trykk på kategoriene for å finne mer ut om dem.</h3>
+            <ul>
+                <li>
+                    <p>Informasjonen skal stå her.</p>
+                </li>
+            </ul>
+        </section>
     </div>
     
     <script src="ressurser.js"></script>
