--- a/UIN_coursefiles_2023/arbeidskrav_2/index.html
+++ b/UIN_coursefiles_2023/arbeidskrav_2/index.html
@@ -13,11 +13,11 @@
             <h1>ressursarkiv</h1>
         </header>
         <nav>
-                <button onclick="addHTML()">html</button>
-                <button onclick="addToBody()">css</button>
-                <button onclick="addToBody()">javascript</button>
-                <button onclick="addToBody()">react</button>
-                <button onclick="addToBody()">sanity & headless cms</button>
+                <button class="tap" onclick="addHTML()">html</button>
+                <button class="tap" onclick="addCss()">css</button>
+                <button class="tap" onclick="addJava()">javascript</button>
+                <button class="tap" onclick="addReact()">react</button>
+                <button class="tap" onclick="addSnH()">sanity & headless cms</button>
         </nav>
         <section id="bodyview">
             <h3>Trykk på kategoriene for å finne mer ut om dem.</h3>
