--- a/UIN_coursefiles_2023/arbeidskreav_2losning/arbeidskrav_2/index.html
+++ b/UIN_coursefiles_2023/arbeidskreav_2losning/arbeidskrav_2/index.html
@@ -12,21 +12,8 @@
         <header>
             <h1>ressursarkiv</h1>
         </header>
-        <nav>
-                <button class="tap" onclick="addHTML()">html</button>
-                <button class="tap" onclick="addCss()">css</button>
-                <button class="tap" onclick="addJava()">javascript</button>
-                <button class="tap" onclick="addReact()">react</button>
-                <button class="tap" onclick="addSnH()">sanity & headless cms</button>
-        </nav>
-        <section id="bodyview">
-            <h3>Trykk på kategoriene for å finne mer ut om dem.</h3>
-            <ul>
-                <li>
-                    <p>Informasjonen skal stå her.</p>
-                </li>
-            </ul>
-        </section>
+        <nav id="navigation"></nav>
+        <main id="page-content"></main>
     </div>
     
     <script src="ressurser.js"></script>
